styles/styles.css
@font-face {
    font-family: "v_CCMeanwhile";
    src: url("../assets/Fonts/Meanwhile.ttf") format("truetype");
    font-style: normal;
    font-weight: normal;
    }

* {
    margin: 0;
    padding: 0;
}

html {
    display: flex;
    justify-content: center;
}
body {
    width: 1100px;
    text-align: center;
    position: relative;
}

a {
    text-decoration: none;
    transition-duration: 0.5s;
}

a:hover, a:hover *  {
    color: #97cceb !important;
    text-shadow: 0 1px 1px black;
    transition-duration: 0.5s;
}

header {
    width: 100%;
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #9d877c;
    position: relative;
}

.logo {
    position: absolute;
    left: 105px;
    top: 5px;
}

h1 {
    font-family: "v_CCMeanwhile";
    font-size: 60px;
    color: rgb(130, 115, 108);
    line-height: 1.2;
    text-align: left;
    text-transform: uppercase;

}

p {
    font-size: 18px;
    font-family: "Arial Narrow", Arial, sans-serif;
    color: rgb(157, 135, 124);
    line-height: 1.2;
    text-align: left;
}


h4 a {
    color: rgb(232, 239, 250); /* Цвет ссылок */
    text-decoration: none;
}
h4 a:visited {
    color: #cecece; /* Цвет посещенных ссылок */
}
h4 a:active {
    color: #e6eefa; /* Цвет активных ссылок */
}


.nav {
    display: flex;

}

.nav a {
    margin-right: 30px;
    font-weight: 300;
    font-size: 24px;
    font-family: "Arial Narrow", Arial, sans-serif;
    color: rgb(232, 239, 250);
    line-height: 1.2;
    text-align: left;
}

.nav h4:last-child {
    margin: 0;
}

main {
    height: 1600px;
    background-image: url(../assets/images/background.png);
    background-repeat: no-repeat;
    padding: 0 85px;
}

.top-wrapper {
    padding-top: 65px;
    padding-left: 64%;
}

.top-wrapper h1 {
    margin-bottom: 45px;
}

.top-wrapper .info {
    margin-left: 84px;
}

.top-wrapper .info span {
    padding-right: 30px;
}

.middle-wrapper {
    margin-top: 205px;
    display: flex;
    justify-content: space-between;
}

.left-column h1 {
    margin-bottom: 45px;
}

.left-column {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
}

.left-column img {
    padding-bottom: 44px;
}

.left-column p {
    width: 80%
}

.right-column {
    padding-top: 10px;
    display: flex;
    flex-direction: column;
}

.right-column p {
    width: 50%;
    padding-bottom: 45px;
    align-self: end;
}

.right-column img {
    border-bottom: solid #9d877c 3px;
}

.right-column h3 {
    align-self: center;
    padding-top: 10px;
}

.fish-size {
    font-size: 30px;
    font-weight: 200;
    font-family: "Arial Narrow", Italic, sans-serif;
    color: rgb(157, 135, 124);
    line-height: 1.2;
    text-align: left;
}

.bottom-wrapper {
    margin-top: 100px;
    position: relative;
}

.bottom-wrapper * {
    color: #665952;
}

.bottom-wrapper p {
    margin-top: 30px;
    width: 18%;
}

.food-wrapper {
    position: absolute;
    left: 20%;
    top: 77%;
    height: 200px;
    width: 200px;
}

.food-wrapper img, .food-wrapper p {
    position: absolute
}

.sard {
    bottom: 106px;
    right: 100px;
}

.sard-text {
    top: 53px;
    right: 226px;
}

.anch {
    bottom: 91px;
    left: 147px;
}

.anch-text {
    left: 252px;
    top: 74px;
}

.scumb {
    bottom: 4px;
    left: 59px;
}

.scumb-text {
    top: 151px;
    left: 170px;
}


footer {
    position: absolute;
    display: flex;
    justify-content: space-around;
    top: 89%;
    width: 100%;
    height: 217px;
    background-image: url("../assets/images/footer-bg.png");
}

footer h4 {
    color: #e6eefa;
    font-size: 24px;
    font-family: "Arial Narrow", Italic, sans-serif;
    font-weight: 300;
}


footer p {
    color: #c1cbdc;
}
footer {
    display: flex;
}

.footer-left-wrapper {
    display: flex;
    align-self: center;
}

.footer-left-wrapper p {
    padding-left: 20px;
}

.footer-mid-wrapper {
    display: flex;
    align-self: end;
}

.footer-mid-wrapper div {
    padding-right: 20px;
    text-align: center;
    padding-bottom: 27px;
}

.footer-mid-wrapper div:last-child {
    padding-left: 0;
}

.footer-right-wrapper {
    display: flex;
    align-self: end;
    flex-direction: column;
    padding-bottom: 25px;
}

.socials {
    padding-top: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.socials svg:first-child {
    padding-right: 16px;
}

/* Gallry styles*/
.gallery-main {
    background-image: url(../assets/images/gallery/gradient-bg.png);
}
.gallery-top-wrapper {
    padding-top: 70px;
    color: #665952;
    display: flex;
    align-items: center;
    justify-content: center;
}

.gallery-top-photo-wrapper {
    padding-top: 64px;
    display: flex;
    justify-content: space-around;
}

.gallery-middle-photo-wrapper {
    padding-top: 26px;
    display: flex;
    justify-content: space-around;
}

.gallery-left-col, .gallery-right-col {
    display: flex;
    flex-direction: column;
}

.gallery-left-col img:nth-child(n+2), .gallery-right-col img:nth-child(n+2) {
    padding-top: 26px;
}

/* Areal styles*/

.areal-main {
    background-image: url("../assets/images/areal/areal-bg.png");
}

.areal-top {
    padding-top: 75px;
    justify-content: space-between;
}

.areal-wrapper {
    display: flex;
}

.areal-mid {
    display: flex;
    margin-top: 100px;
    position: relative;
}

.sail-fish-image {
    position: absolute;
    top: 71px;
    left: -76px;
}

.areal-mid .areal-left-col {
    align-self: flex-start;
}

.areal-left-col {
    display: flex;
    flex-direction: column;
    width: 360px;
}

.middle-left-areal {
    width: 320px;
}

.areal-left-col p {
    padding-top: 20px;
}

.areal-bottom-wrapper {
    position: relative;
    margin-top: 270px;
}

.areal-bottom-wrapper img {
    position: absolute;
}

img.areal-first, img.areal-third {
    top: 89px;
}

img.areal-first {
    left: 0;
}

img.areal-second {
    z-index: 1;
    top: 50px;
    left: calc(50% - 447px/2)
}

img.areal-third {
    right: 0;
}

/* Areal animation*/
.tooltip {
    position: relative;
    display: inline-block;
}

/* Tooltip text */
.tooltip .tooltiptext {
    bottom: 211px;
    left: 32px;
    visibility: hidden;
    width: 600px;
    background-color: #9d877c;
    color: #c1cbdc;
    font-size: 18px;
    font-family: "Arial Narrow", Arial, sans-serif;
    line-height: 1.2;
    text-align: left;
    text-align: center;
    padding: 10px 10px;
    border-radius: 6px;
 
    /* Position the tooltip text - see examples below! */
    position: absolute;
    z-index: 1;
    opacity: 0;
    transition: opacity 0.3s, visibility 0s linear 0.3s;

}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
    visibility: visible;
    opacity: 1;
    transition-delay: 0s;
    
}

.map-wrapper {
    position: relative;
}

.blob {
    position: absolute;
    background: black;
    border-radius: 50%;
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
    margin: 10px;
    height: 20px;
    width: 20px;
    transform: scale(1);
    animation: pulse-black 2s infinite;
    background: rgba(255, 82, 82, 1);
    box-shadow: 0 0 0 0 rgba(255, 82, 82, 1);
    animation: pulse-red 2s infinite;
}

.blob_1 {
    bottom: 23%;
    left: 34%;
}
.blob_2 {
    top: 72%;
    left: 13%;
}
.blob_3 {
    top: 48%;
    left: 13%;
}
  
  @keyframes pulse-red {
    0% {
      transform: scale(0.95);
      box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
    }
    
    70% {
      transform: scale(1);
      box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
    }
    
    100% {
      transform: scale(0.95);
      box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
    }
  }


/* Main pahe styles*/

.main-page {
    background-image: url(../assets/images/gallery/gradient-bg.png);
    padding: 0;
}

.main-page-bottom-wrapper {
    display: flex;
    justify-content: center;
    padding-top: 80px;
}

.main-left-col {
    display: flex;
    flex-direction: column;
}

.main-middle-col {
    padding-left: 26px;
}

.main-right-col {
    padding-left: 26px;
    display: flex;
    flex-direction: column;
}

.main-photo-nav-wrapper {
    position: relative;
}

.main-left-col .main-photo-nav-wrapper:first-child,
.main-right-col .main-photo-nav-wrapper:first-child {
    margin-bottom: 30px;
}

.main-photo-nav-wrapper p {
    font-size: 30px;
    font-family: "Arial";
    color: rgb(157, 135, 124);
    line-height: 1.2;
    text-align: center;
    width: 150px;
    position: absolute;
    background-color: #f2f5fb;
    padding: 7px 0;
}

.main-left-col .main-photo-nav-wrapper p {
    left: 0;
    bottom: 4px;
}

.main-middle-col .main-photo-nav-wrapper p {
    left: 3px;
    top: 0;
}

.main-right-col .main-photo-nav-wrapper p {
    right: 0;
    bottom: 4px;
}

/* contacts page styles */

.contacts-page {
    background-image: url(../assets/images/gallery/gradient-bg.png);
}

.contacts-top-wrapper {
    padding-top: 50px;
}

.contacts-top-wrapper > * {
    color: rgb(114, 94, 84);
}

.contacts-top-wrapper p {
    padding-top: 74px;
    font-size: 30px;
    font-family: "Arial";
    line-height: 1.2;
    text-align: left;
}  

.contacts-middle-wrapper {
    margin-top: 140px;
    display: flex;
}

.contacts-left-col {
    background-color: #f5f7fa;
    height: 280px;
    width: 560px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    padding-left: 40px;
} 
.contacts-left-col p {
    font-size: 30px;
    font-family: "Arial";
    color: rgb(114, 94, 84);
    line-height: 1.2;
    text-align: left;
}

.contacts-right-col {
    padding-left: 84px;
    display: flex;
    flex-direction: column;
}

.contacts-right-col input {
    width: 288px;
    background-color: rgb(245, 247, 250);
    height: 59px;
    font-size: 30px;
    font-family: "Arial";
    color: rgb(114, 94, 84);
    line-height: 1.2;
    border: none;
    padding-left: 30px;
}
  
.contacts-right-col input:nth-child(n+2) {
    margin-top: 20px;
}

.contacts-right-col input:last-child {
    height: 122px;
}

.contacts-map-wrapper {
    margin-top: 40px;
}

/*  About page styles   */

.about-page {
    background-image: url(../assets/images/about/about-bg.png);
    padding: 0 55px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.about-page * {
    text-align: center;
    color: rgb(102, 89, 82);

}

.about-page-top-wrapper {
    padding-top: 25px;
}

/* .about-page-top-wrapper h1 {
    color: rgb(102, 89, 82);
} */

.about-page-top-wrapper img {
    margin-top: 24px;
}

.about-page-top-wrapper h1:last-child {
    margin-top: 30px;
}

.about-page-under-wrapper {
    display: flex;
    margin-top: 50px;
}

.about-right-col, .about-left-col {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.about-page-under-wrapper div h2 {
    font-size: 30px;
    font-family: "v_CCMeanwhile";
    color: rgb(102, 89, 82);
    line-height: 1.2;
}  

.about-page-under-wrapper div img {
    margin-top: 22px;
}

.about-page-under-wrapper div p {
    margin-top: 36px;
    width: 70%;
    font-size: 30px;
    font-family: "Arial";
    color: rgb(102, 89, 82);
    line-height: 1.2;
}
  

